--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
         <div class="add-unit-btn">Add</div>
       </div>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="./js/animations.js"></script>
     <script src="./js/app.js"></script>
   </body>
 </html>
